--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -19,7 +19,49 @@ nav{
    text-decoration: none;
     margin: 3px;
 }
+
 .nav-item{
     color: #FFFFFF;
-   
 }
+
+.bottom-nav-icons{
+    display: none;
+}
+
+/* .nav-item:not(.signup-login-container) {
+    flex:1;
+} */
+
+
+
+
+@media (max-width: 768px) {
+    .nav-container {
+      display: none;
+    }
+
+    /* Show the bottom navigation */
+    .bottom-nav-icons{
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 63px;
+      background-color: #FFFFFF;
+      
+      z-index: 9999; 
+    }
+  
+    /* Style for bottom navigation icons */
+    .bottom-nav-icons a {
+      color: #2E0052;
+      text-decoration: none;
+      font-size: 24px;
+    }
+  }
+  
+ 
+  
