--- a/src/Components/Products/product.css
+++ b/src/Components/Products/product.css
@@ -40,7 +40,10 @@ section {
     align-items: center;
     justify-content: center;
     position: relative;
+    gap: 10px;
 }
+
+
 
 .profile {
 
@@ -69,15 +72,15 @@ section {
     background-color: #FFFFFF;
     border: 1px solid #DDDDDD;
     width: 133px;
-    height:80px;
+    height: 80px;
     margin-top: 120px;
 }
 
-.content{
+.content {
     display: flex;
     flex-direction: column;
     align-items: center;
-   
+
     justify-content: center;
     gap: 5px;
 }
@@ -163,7 +166,7 @@ section {
     align-items: center;
     height: 90px;
     justify-content: space-between;
-    /* max-width: fit-content; */
+   overflow: auto;
 }
 
 .button-box select {
@@ -208,10 +211,23 @@ section {
 
 /* grid view end here */
 
+.cart-icon-image{
+    position: relative;
+    bottom: 64px;
+    float: right;
+    padding:15px;
+    color: #1D7000;
+    margin-right: 10px;
+    background-color: #FFFFFF;
+    width: 51px;
+    height: 51px;
+    cursor: pointer;
+    border-radius: 50%;
+}
 
 /* List view starts here */
 .list-view {
-    display: inline-block;
+    display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
@@ -221,18 +237,117 @@ section {
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
     border: 2px solid #fff;
     margin: 10px;
 }
 
-.list-item img {
-    background-color: #D4E5FF;
-    width: 100%;
-    max-width: 250px;
+
+.listimage img{
+    width: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 300px;
+    object-fit: cover;
+  padding: 10px;
+}
+
+.view-button {
+    display: flex;
+    background-color: #2E0052;
+    width: 150px;
+    height: 48px;
+    border-radius: 26px;
+    align-items: center;
+    justify-content: center;
+    color: #FFFFFF;
+    cursor: pointer;
+
 }
 
 /* List view ends here */
+
+
+/* Feedabck */
+.feedback-container {
+    position: relative;
+    bottom: 75px;
+    right: 45px;
+    float: right;
+    z-index: 999;
+}
+
+
+.feedback-icon {
+    /* background-color: #1D7000; */
+    /* color: #FFFFFF; */
+    /* width: 100px; */
+    /* height:100px; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 25px;
+    cursor: pointer;
+
+}
+
+.feedback-form {
+    position: absolute;
+    bottom: 60px;
+    /* Adjust as needed */
+    right: 40px;
+    background-color: #FFFFFF;
+    border: 1px solid #DDDDDD;
+    border-radius: 10px;
+    padding: 10px;
+    width: 300px;
+    height: 300px;
+    z-index: 1000;
+
+}
+
+.feedback-form h1 {
+    font-size: 18px;
+    margin: 0;
+    padding-bottom: 10px;
+}
+
+.select-option select {
+    width: 100%;
+    width: calc(100% - 20px);
+    padding: 5px;
+    margin-bottom: 10px;
+    background-color: #F3F3F3;
+    border-radius: 5px;
+}
+
+textarea {
+    width: calc(100% - 20px);
+    /* Adjust width as needed */
+    margin: 10px 0;
+    height: 150px;
+    padding: 5px;
+    border: 1px solid #DDDDDD;
+    border-radius: 5px;
+    background-color: #F3F3F3;
+}
+
+.btn {
+    text-align: center;
+}
+
+.btn button {
+    background-color: #2E0052;
+    color: #FFFFFF;
+    border: none;
+    padding: 8px 20px;
+    border-radius: 26.12px;
+    cursor: pointer;
+
+}
+
+/* feedback end here */
 
 
 /* Adjust styles for screens smaller than 768px */
