--- a/src/Components/CheckOut/checkout.css
+++ b/src/Components/CheckOut/checkout.css
@@ -1,124 +1,152 @@
 .checkout-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
 }
 
-.left-container {
-    width: 45%;
-    display: flex;
-    flex: 2;
-    flex-direction: column;
-}
-
-.right-container {
-    /* width: 45%; */
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.backtocart {
-   width: 300px;
-   height: 50px;
-   margin-bottom: 20px;
-}
-
-.address,
-.payment,
-.cart-items {
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.address h3,
-.payment h3,
-.cart-items h3 {
-    flex: 1;
-    text-align: left;
-    margin-right: 10px;
-}
-
-.address-input {
+.back-to-cart button {
+    width: 300px;
     height: 50px;
-    flex: 2;
-    /* display: flex; */
-    justify-content: space-between;
+    margin-left: 50px;
 }
 
-.payment-method-select {
-    flex: 2;
-}
-
-.cart-item-row {
+.checkout-heading {
     display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 20px;
+    align-items: center;
+    justify-content: center;
+    text-decoration: underline;
+    font-size: 36px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
 }
 
-.product-image-container {
-    display: flex; /* Use flexbox */
-    flex-wrap: wrap; /* Allow items to wrap to the next line */
-    justify-content: space-between; /* Distribute items evenly along the main axis */
-    margin-bottom: 20px; /* Add some spacing between rows */
+.address-container,
+.payment-container,
+.cart-items-container {
+    width: 800px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 20px 20px;
+
 }
 
-.product-image-container .product-image {
-    width: calc(33.33% - 10px); /* Each image takes 33.33% width of the container with some spacing */
-    margin-bottom: 10px; /* Add some spacing between images */
-    cursor: pointer; /* Change cursor to pointer on hover */
+.address-container textarea {
+    width: 300px;
+    height: 100px;
+    color: #797979;
 }
 
-.product-info {
-    width: 100%; /* Make the product info div take full width */
-    background-color: #f9f9f9; /* Add a background color */
-    padding: 10px; /* Add some padding */
-    box-sizing: border-box; /* Include padding in width calculation */
+.cart-items-container {
+    width: 800px;
 }
 
+.payment-container select{
+    width: 300px;
+    height: 30px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    color: #797979;
+}
+.cart-image-body{
+    display: flex;
+   flex-wrap: wrap;
+}
 
-.product-info {
+.product-image-container{
+    /* display: inline; */
+    margin: 10px;
+}
+
+.product-image-container img{
+    width: 90px;
+    height: 60px;
+    padding: 5px;
+}
+
+.product-info{
     position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 10px;
-    text-align: left;
-    display: none;
+    margin-top: 12px;
+    left: 305px;
 }
 
-.product-image-container:hover .product-info {
-    display: block;
+.left-order-button {
+    border: 2px solid #ccc; 
+    border-radius: 5px; 
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    margin: 30px;
+    margin-top: 50px;
+ 
+}
+
+.order-content {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.btn button {
+    margin-right: 20px; 
+    width: 200px;
+    background-color: #FFD600;
+    color: #000000;
+    border-radius: 5px;
 }
 
 .place-order-button {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    color: #fff;
+    width: 150px; 
+    padding: 10px; 
+    background-color: #FFD600;
+    color: #000000;
     border: none;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     cursor: pointer;
 }
 
+.left-order-button p {
+    margin: 0; 
+    text-align: left; 
+    font-size: 14px; 
+    color: #B52B00;
+    font-family: "Roboto",sans-serif;
+    font-family: 400;
+
+}
+h3{
+    color: #B52B00;
+}
+
+.right-container {
+    width: 450px;
+    height: 400px;
+    border: 4px solid #E1E1E1;
+    border-radius: 16px;
+    padding: 20px; /* Add padding for inner content */
+    box-sizing: border-box; /* Include padding and border in the width and height */
+}
+
+.right-container button {
+    width: 100%;
+    padding: 10px;
+    background-color: #FFD600;
+    color: #000000;
+    border: none;
+    cursor: pointer;
+    margin-bottom: 10px; /* Add margin below the button */
+}
+
+.right-container p {
+    margin: 10px 0; /* Add margin for spacing */
+}
+
 .order-summary {
-    margin-top: 20px;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 10px;
 }
 
-@media screen and (max-width: 768px) {
-    .checkout-container {
-        flex-direction: column;
-    }
-    
-    .left-container,
-    .right-container {
-        width: 100%;
-    }
-
-    .product-image-container {
-        width: calc(50% - 10px); /* Adjust width for mobile view */
-    }
+.order-summary h3 {
+    margin-bottom: 10px;
 }
+
