--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -2,7 +2,7 @@ section {
     max-width: 1516px;
     width: 95%;
     margin: auto;
-    margin-top: 30px;
+    /* margin-top:5px; */
 }
 
 .Head {
