--- a/src/Components/Invoices/invoices.css
+++ b/src/Components/Invoices/invoices.css
@@ -1,54 +1,57 @@
+
 .invoices-container {
+    height: 500px;
     padding: 20px;
-    height: 100vh;
 }
 
 .invoices-container h2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-bottom: 20px;
+    font-size: 24px;
+    font-family: "Roboto", sans-serif;
 }
 
+.left-invoice {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Invoice list container */
 .invoice-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .invoice-item {
-    border: 1px solid #ddd;
+    width: 95%; 
     padding: 10px;
-    border-radius: 5px;
+    margin:20px 20px;
     background-color: #f9f9f9;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.bottom-border{
+    border-bottom:2px solid #E1E1E1;
+    margin:20px 20px;
+    width: 95%; 
+
+}
+.left-invoice img {
+    width: 90px;
+    height: 90px;
+    object-fit: cover;
+    border-radius: 5px;
+    margin-right: 10px;
 }
 
 .invoice-item p {
     margin: 5px 0;
 }
 
-/* Responsive adjustments */
-@media screen and (max-width: 768px) {
-    .invoice-list {
-        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    }
-    
-    .invoice-item {
-        padding: 8px;
-    }
-    
-    .invoice-item p {
-        font-size: 14px;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    .invoice-list {
-        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    }
-    
-    .invoice-item {
-        padding: 6px;
-    }
-    
-    .invoice-item p {
-        font-size: 12px;
-    }
-}
