--- a/src/Components/productDetails/productdetails.css
+++ b/src/Components/productDetails/productdetails.css
@@ -1,15 +1,18 @@
 /* productdetails.css */
+.product-deatils{
+    height: 100vh;
+}
 
 /* General styles */
 .back-button {
     width: 150px;
     height: 33px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .product-details-container {
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     justify-content: space-evenly;
     align-items: center;
