--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,18 @@
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
 }
+
+.back-button{
+  text-decoration: none;
+  width: 300px;
+  height: 50px;
+  margin-left: 50px;
+  background-color:#2E0052 ;
+  display: flex;
+  color: #FFFFFF;
+  border-radius: 16px;
+  align-items: center;
+  justify-content: center;
+  font-family: "Roboto", sans-serif;
+  
+}
