added new change and fix some bugs

--- a/src/Components/CheckOut/checkout.css
+++ b/src/Components/CheckOut/checkout.css
@@ -9,7 +9,9 @@
     height: 50px;
     margin-left: 50px;
 }
-
+.error-message{
+    color: red;
+}
 .checkout-heading {
     display: flex;
     align-items: center;
