--- a/src/Components/Invoices/invoices.css
+++ b/src/Components/Invoices/invoices.css
@@ -1,3 +1,4 @@
+/* Default styles */
 
 .invoices-container {
     min-height: 500px;
@@ -19,7 +20,6 @@
     justify-content: center;
 }
 
-/* Invoice list container */
 .invoice-list {
     display: flex;
     flex-wrap: wrap;
@@ -28,21 +28,22 @@
 }
 
 .invoice-item {
-    width: 95%; 
+    width: 95%;
     padding: 10px;
-    margin:20px 20px;
+    margin: 20px;
     background-color: #f9f9f9;
     border-radius: 5px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.bottom-border{
-    border-bottom:2px solid #E1E1E1;
-    margin:20px 20px;
-    width: 95%; 
 
+.bottom-border {
+    border-bottom: 2px solid #E1E1E1;
+    margin: 20px;
+    width: 95%;
 }
+
 .left-invoice img {
     width: 90px;
     height: 90px;
@@ -55,3 +56,26 @@
     margin: 5px 0;
 }
 
+/* Media Queries for responsiveness */
+
+@media screen and (max-width: 768px) {
+    .right-invoice a {
+        width: auto;
+        padding: 20px;
+    }
+    
+
+    .invoice-item {
+        width: 100%;
+        /* Full width on smaller screens */
+        margin: 10px;
+        /* Adjust margin for spacing */
+    }
+
+    .bottom-border {
+        width: 100%;
+        /* Full width on smaller screens */
+        margin: 10px;
+        /* Adjust margin for spacing */
+    }
+}
