--- a/src/Components/CheckOut/checkout.css
+++ b/src/Components/CheckOut/checkout.css
@@ -9,9 +9,11 @@
     height: 50px;
     margin-left: 50px;
 }
-.error-message{
+
+.error-message {
     color: red;
 }
+
 .checkout-heading {
     display: flex;
     align-items: center;
@@ -35,7 +37,7 @@
 
 .address-container textarea {
     width: 300px;
-    height: 100px;
+    height: 72px;
     color: #797979;
 }
 
@@ -43,44 +45,57 @@
     width: 800px;
 }
 
-.payment-container select{
+.payment-container select {
     width: 300px;
     height: 30px;
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     color: #797979;
 }
-.cart-image-body{
+
+.cart-image-body {
     display: flex;
-   flex-wrap: wrap;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+    width: 400px;
 }
 
-.product-image-container{
-    /* display: inline; */
-    margin: 10px;
-}
 
-.product-image-container img{
+
+.product-image-container img {
     width: 90px;
     height: 60px;
     padding: 5px;
+    border: 2px solid black;
+    border-radius: 6px;
 }
 
-.product-info{
-    position: absolute;
-    margin-top: 12px;
-    left: 305px;
+.product-image-container {
+    position: relative;
+    margin: 10px;
+}
+
+.product-info-data {
+    top: 100%;
+    background-color: white;
+    padding: 5px;
+    /* border: 1px solid #ccc;  */
+}
+
+.product-info-data p {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
 }
 
 .left-order-button {
-    border: 2px solid #ccc; 
-    border-radius: 5px; 
+    border: 2px solid #ccc;
+    border-radius: 5px;
     padding: 20px;
     display: flex;
     align-items: center;
     margin: 30px;
     margin-top: 50px;
- 
+
 }
 
 .order-content {
@@ -90,7 +105,7 @@
 }
 
 .btn button {
-    margin-right: 20px; 
+    margin-right: 20px;
     width: 200px;
     background-color: #FFD600;
     color: #000000;
@@ -98,8 +113,8 @@
 }
 
 .place-order-button {
-    width: 150px; 
-    padding: 10px; 
+    width: 150px;
+    padding: 10px;
     background-color: #FFD600;
     color: #000000;
     border: none;
@@ -108,15 +123,16 @@
 }
 
 .left-order-button p {
-    margin: 0; 
-    text-align: left; 
-    font-size: 14px; 
+    margin: 0;
+    text-align: left;
+    font-size: 14px;
     color: #B52B00;
-    font-family: "Roboto",sans-serif;
+    font-family: "Roboto", sans-serif;
     font-family: 400;
 
 }
-h3{
+
+h3 {
     color: #B52B00;
 }
 
@@ -125,8 +141,10 @@ h3{
     height: 400px;
     border: 4px solid #E1E1E1;
     border-radius: 16px;
-    padding: 20px; /* Add padding for inner content */
-    box-sizing: border-box; /* Include padding and border in the width and height */
+    padding: 20px;
+    /* Add padding for inner content */
+    box-sizing: border-box;
+    /* Include padding and border in the width and height */
 }
 
 .right-container button {
@@ -136,11 +154,13 @@ h3{
     color: #000000;
     border: none;
     cursor: pointer;
-    margin-bottom: 10px; /* Add margin below the button */
+    margin-bottom: 10px;
+    /* Add margin below the button */
 }
 
 .right-container p {
-    margin: 10px 0; /* Add margin for spacing */
+    margin: 10px 0;
+    /* Add margin for spacing */
 }
 
 .order-summary {
@@ -152,3 +172,41 @@ h3{
     margin-bottom: 10px;
 }
 
+@media screen and (max-width:768px) {
+    .checkout-page {
+        /* position: fixed; */
+        width: 450px;
+    }
+
+    .left-order-button,
+    .left-container {
+        width: 427px;
+        margin-bottom: 37px;
+    }
+
+    .right-container,
+    .back-to-cart {
+        display: none;
+    }
+
+    .checkout-page {
+        max-width: 450px;
+    }
+
+    .left-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+
+    }
+
+    .address-container,
+    .payment-container,
+    .cart-items-container {
+        display: flex;
+        flex-direction: column;
+        max-width: 500px;
+    }
+
+}
