--- a/src/Components/productDetails/productdetails.css
+++ b/src/Components/productDetails/productdetails.css
@@ -1,9 +1,9 @@
 /* productdetails.css */
-.product-deatils{
+
+.product-deatils {
     height: 100vh;
 }
 
-/* General styles */
 .back-button {
     width: 150px;
     height: 33px;
@@ -12,11 +12,9 @@
 
 .product-details-container {
     width: 100%;
-    /* height: 100vh; */
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-
 }
 
 .product-images-container {
@@ -24,13 +22,12 @@
     width: 400px;
     height: 400px;
     border-radius: 15px;
-
 }
 
 .product-img img {
     width: 100%;
     height: 400px;
-    object-fit: none;
+    object-fit: fill; 
     padding: 10px;
 }
 
@@ -38,7 +35,6 @@
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     margin-bottom: 10px;
-
 }
 
 .product-description {
@@ -58,7 +54,6 @@
 
 .product-rating {
     color: #f1c40f;
-    /* Yellow color for stars */
     margin-bottom: 10px;
 }
 
@@ -71,7 +66,6 @@
     display: inline-block;
     unicode-bidi: bidi-override;
     color: #f1c40f;
-    /* Yellow color for stars */
 }
 
 .star-rating>span {
@@ -85,7 +79,6 @@
     content: "\2605";
     position: absolute;
     color: #f39c12;
-    /* Orange color for highlighted stars */
 }
 
 .action-buttons {
@@ -112,29 +105,30 @@
 
 /* Media queries for responsiveness */
 @media screen and (max-width: 768px) {
-
-
     .product-details-container {
-        height: 1024px;
         flex-direction: column;
         align-items: center;
     }
 
-    .product-image,
+    .product-images-container {
+        width: 80%; 
+        height: auto; 
+        margin-bottom: 20px; 
+    }
+
     .product-description {
-        width: 100%;
-        max-width: 100%;
-        padding: 10px;
-        /* Adjust padding for smaller screens */
+        width: 80%; 
     }
 
-    .action-buttons {
-        flex-direction: column;
-        align-items: center;
+    .action-buttons{
+        margin-bottom: 80px;
     }
 
-    .action-buttons button {
+    .action-buttons button{
+        border-radius: 15px;
+    }
 
-        margin-bottom: 10px;
+    .product-deatils a{
+       display: none;
     }
 }
