--- a/src/Components/Products/product.css
+++ b/src/Components/Products/product.css
@@ -328,7 +328,8 @@ section {
     align-items: center;
     height: 300px;
     object-fit: cover;
-    padding: 10px;
+    padding: 30px;
+    background-color: #D4E5FF;
 }
 
 .view-button {
