--- a/src/Components/Products/product.css
+++ b/src/Components/Products/product.css
@@ -128,7 +128,7 @@ section {
 .banner-content p {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
-    font-size: 58px;
+    font-size: 50px;
     margin: 0;
     width: 50%;
 }
@@ -187,7 +187,7 @@ section {
 .button-box select {
     background-color: #D9D9D9;
     width: 140px;
-    border-radius: 20px;
+    border-radius:7px;
     height: 30px;
     margin-right: 10px; /* Add margin between button boxes */
 }
@@ -211,6 +211,7 @@ section {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-bottom: 80px;
 }
 
 .cart-image {
@@ -295,6 +296,7 @@ section {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-bottom: 80px;
 }
 
 .list-item {
@@ -458,20 +460,35 @@ textarea {
 
     .banner{
         margin-top: 150px;
+        width: 100%;
+        height: 130px;
     }
+  
 
     .banner-content p {
-        font-size: 36px;
-        width: auto;
+        font-size: 20px;
+        
     }
 
     .banner-image {
-        display: none;
+        
+        width: 233px;
+        height: 153px;
+        /* object-fit: cover; */
+        right: 0;
+        bottom: 0;
         
     }
+  
 
     .all-buttons {
         max-width: fit-content;
         overflow-x: auto;
     }
+    .grid-box,
+    .list-box{
+        display: none;
+    }
+
+   
 }
